# IncludeGuard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Instructions.md  PHASE1_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  comprehensive_precision_audit.py  debug_precision.py  debug_removal.py  docker-compose.yml  nlohmann_demo.html  pytest.ini  requirements.txt  run_all_tests.py  sample_frontend_style.html  setup.cfg  setup.py  tox.ini  trace_logic.py  validate_precision.py
.github/workflows/: analysis.yml  ci-cd.yml  includeguard.yml
examples/: README.md
examples/sample_project/: database.h  database_client.cpp  main.cpp  processor.cpp  service.cpp  utils.h
includeguard/: __init__.py  benchmark.py  cli.py  errors.py
includeguard/analyzer/: __init__.py  build_profiler.py  estimator.py  forward_declaration.py  graph.py  parser.py  pch_recommender.py
includeguard/ci/: __init__.py  github_action.py
includeguard/fixer/: __init__.py  patch_generator.py
includeguard/server/: api.py  app.py  simple_server.py
includeguard/ui/: __init__.py  dashboard.html  html_report.py  rich_formatter.py
scripts/: README.md  benchmark_accuracy.py  run_full_validation.ps1  run_full_validation.sh  validate_real_projects.py  validate_with_compilation.py
tests/: __init__.py  conftest.py  test_comprehensive_suite.py  test_coverage_gaps.py  test_critical_validation_phase_b.py  test_edge_cases.py  test_estimator_comprehensive.py  test_graph.py  test_graph_comprehensive.py  test_integration.py  test_parser.py  test_parser_comprehensive.py  test_performance.py  test_threshold_validation.py  test_validation_ground_truth.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: analyzer.ts  extension.ts
web-dashboard/: README.md
web-dashboard/backend/: .env.example  README.md  main.py  railway.toml  requirements.txt
web-dashboard/frontend/: index.html  package-lock.json  package.json
web-dashboard/frontend/src/: App.tsx  api.ts  index.css
web-dashboard/frontend/src/components/: ProgressView.tsx  ResultsView.tsx  Terminal.tsx  UploadSection.tsx
