[metadata]
name = includeguard
version = 2.0.0
author = Your Name
author_email = you@example.com
description = Fast C++ include analyzer for optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/includeguard
project_urls =
    Bug Tracker = https://github.com/yourusername/includeguard/issues
    Documentation = https://includeguard.readthedocs.io
    Source Code = https://github.com/yourusername/includeguard
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
    Topic :: Utilities
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0.0
    rich>=12.0.0
    networkx>=2.6
    plotly>=5.0.0
    pandas>=1.3.0
    pydot>=1.4.2
    flask>=2.0.0
    flask-cors>=3.0.0
    psutil>=5.8.0
    requests>=2.26.0

[options.packages.find]
where = .
include = includeguard*

[options.entry_points]
console_scripts =
    includeguard = includeguard.cli:main

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.12.0
    pytest-timeout>=1.4.0
    black>=21.0
    flake8>=3.9.0
    mypy>=0.910
    bandit>=1.7.0
    safety>=1.10.0
    sphinx>=4.0
    sphinx-rtd-theme>=1.0
    sphinx-autodoc-typehints>=1.12.0

[options.package_data]
includeguard = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,.venv,venv,build,dist,*.egg-info
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[coverage:run]
branch = True
source = includeguard
omit =
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
